gateway-api/http-route-domain.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nginx-httproute-domainbase
  namespace: webserver
spec:
  parentRefs:
    - name: web-gateway
      sectionName: http
      kind: Gateway
  hostnames:
    - "www.nginx.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nginx-service
          port: 80
          weight: 1

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: apache-httproute-domainbase
  namespace: webserver
spec:
  parentRefs:
    - name: web-gateway
      sectionName: http
      kind: Gateway
  hostnames:
    - "www.apache.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: apache-service
          port: 80
          weight: 1
